# Dynamic-IPv6-Prefix-Fix

./: Cargo.toml  README.MD  config.example.json  dhcp6-prefix-fix.service  flake.nix
.cargo/: config.toml
.github/workflows/: check.yml  mips-cross.yml  nix.yml  test.yml
src/: config.rs  main.rs  packets.rs  ras.rs  utils.rs
